--- a/RAAGs_as_subgroups_of_Out(RAAGs).ipynb
+++ b/RAAGs_as_subgroups_of_Out(RAAGs).ipynb
@@ -15,9 +15,9 @@
    "source": [
     "by Manuel Wiedmer, September 2022\n",
     "\n",
-    "The following code contains some functions that can be used to do computations involving the outer automorphism groups of right-angled groups. In particular, they can be used to find examples of right-angled Artin groups as subgroups of the outer automorphism groups of a right-angled Artin group. Among other things, one can construct for any given right-angled Artin group A_Lambda with at least three vertices a graph Gamma such that A_Lambda is a finite-index subgroup of Out(A_Gamma). Part of this code is based on the code from Benjamin Brück used for [A note on virtual duality and automorphism groups of right-angled Artin groups](https://arxiv.org/abs/2101.08225), arxiv 2101.08225, which can be found on https://gitlab.math.ethz.ch/bbrueck/computations-for-roars/-/blob/master/duality_Out(RAAGs).ipynb\n",
+    "The following code contains some functions that can be used to do computations involving the outer automorphism groups of right-angled groups. In particular, they can be used to find examples of right-angled Artin groups as subgroups of the outer automorphism groups of a right-angled Artin group. Among other things, one can construct for any given right-angled Artin group A_Lambda with at least three vertices a graph Gamma such that A_Lambda is a finite-index subgroup of Out(A_Gamma). Part of this code is based on the code from Benjamin Brück used for [A note on virtual duality and automorphism groups of right-angled Artin groups](https://www.cambridge.org/core/journals/glasgow-mathematical-journal/article/note-on-virtual-duality-and-automorphism-groups-of-rightangled-artin-groups/361EEE6AD7E12AC5F7D87DE26CFFBF13), which can be found on https://github.com/benjaminbrueck/computations_for_roars. In particular, the following functions (in the file \"functions.py\") were taken from that code: ```star```, ```conn_comps```, ```is_Sil```, ```supp_graph```, ```progressBar``` and ```theta```, where the last function was slightly adapted.\n",
     "\n",
-    "The code was used for [Right-angled Artin groups as finite-index subgroups of their outer automorphism groups](), which is a shortened version of my [Master Thesis](https://www.research-collection.ethz.ch/handle/20.500.11850/538688)."
+    "The code was used for [Right-angled Artin groups as finite-index subgroups of their outer automorphism groups](https://arxiv.org/abs/2209.02033), which is a shortened version of my [Master Thesis](https://www.research-collection.ethz.ch/handle/20.500.11850/538688)."
    ]
   },
   {
@@ -239,7 +239,7 @@
    "id": "7d36996e-9a57-491a-b9ea-8a9aeef1913f",
    "metadata": {},
    "source": [
-    "With the code below, we saved the Theta graphs of size up to n in separate documents, one for each size. This code only works for n at most 7 as we entered the number of graphs for each size between zero and seven manually. These numbers were taken from https://garsia.math.yorku.ca/~zabrocki/math3260w03/nall.html, last accessed on 19th Februrary 2022."
+    "With the code below, we saved the Theta graphs of size up to n in separate documents, one for each size."
    ]
   },
   {
@@ -264,7 +264,7 @@
    "id": "b231e0ed-5ecf-45fe-8851-8a6ead44bbd7",
    "metadata": {},
    "source": [
-    "The code below was used to summarise the results for small Theta graphs. We sorted the graph with the code above and then summarised how many graphs of size up to n have already been found and which ones are missing."
+    "The code below was used to summarise the results for small Theta graphs. We sorted the graph with the code above and then summarised how many graphs of size up to n have already been found and which ones are missing. This code only works for n at most 7 as we entered the number of graphs for each size between zero and seven manually. These numbers were taken from https://garsia.math.yorku.ca/~zabrocki/math3260w03/nall.html, last accessed on 19th Februrary 2022."
    ]
   },
   {
