--- a/RAAGs_as_subgroups_of_Out(RAAGs).ipynb
+++ b/RAAGs_as_subgroups_of_Out(RAAGs).ipynb
@@ -500,7 +500,7 @@
     "from functions import *\n",
     "G = nx.Graph()\n",
     "G.add_nodes_from([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11])\n",
-    "G.add_edges_from([(1, 4), (1, 6), (1, 7), (2, 3), (2, 8), (2, 9), (2, 10), (3, 4), (3, 5), (3, 8), (3, 11), (4, 5), (4, 10), (5, 7), (5, 10), (6, 8), (6, 10), (6, 11), (7, 8), (7, 9), (7, 11), (8, 10), (9, 11)])\n",
+    "G.add_edges_from([(1, 2), (1, 4), (1, 5), (2, 3), (2, 6), (2, 8), (3, 4), (3, 6), (3, 8), (4, 9), (4, 10), (4, 11), (5, 6), (5, 9), (5, 10), (6, 7), (6, 9), (7, 8), (7, 9), (7, 11), (8, 9), (8, 10), (10, 11)])\n",
     "print(supp_graphs_forest(G))\n",
     "if supp_graphs_forest(G):\n",
     "    print(check_finite_index(G))\n",
@@ -517,16 +517,41 @@
     "from functions import *\n",
     "G = nx.Graph()\n",
     "G.add_nodes_from([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11])\n",
-    "G.add_edges_from([(1, 4), (1, 6), (1, 7), (2, 3), (2, 8), (2, 9), (2, 10), (3, 4), (3, 5), (3, 8), (3, 11), (4, 5), (4, 10), (5, 7), (5, 10), (6, 8), (6, 10), (6, 11), (7, 8), (7, 9), (7, 11), (8, 10), (9, 11)])\n",
+    "G.add_edges_from([(1, 2), (1, 4), (1, 5), (2, 3), (2, 6), (2, 8), (3, 4), (3, 6), (3, 8), (4, 9), (4, 10), (4, 11), (5, 6), (5, 9), (5, 10), (6, 7), (6, 9), (7, 8), (7, 9), (7, 11), (8, 9), (8, 10), (10, 11)])\n",
     "\n",
     "print(\"Compute the degrees of all vertices:\")\n",
     "for i in range(1,12):\n",
     "    print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
-    "print(\"So, {1,9} needs to be fixed (not necessarily point-wise).\")\n",
+    "print(\"So, {1,11} needs to be fixed (not necessarily point-wise).\")\n",
     "\n",
-    "print(\"Check common neighbours of 1 and 9:\")\n",
+    "print(\"Check common neighbours of 1 and 11:\")\n",
     "for i in range(1,12):\n",
-    "    if (1,i) in G.edges() and (9,i) in G.edges():\n",
+    "    if (1,i) in G.edges() and (11,i) in G.edges():\n",
+    "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
+    "print(\"So, 4 needs to be fixed.\")\n",
+    "\n",
+    "print(\"Check neighbours of 4:\")\n",
+    "for i in range(1,12):\n",
+    "    if (4,i) in G.edges():\n",
+    "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
+    "print(\"So, 9 needs to be fixed.\")\n",
+    "print(\"Also, {3,10} needs to be fixed (not necessarily point-wise).\")\n",
+    "\n",
+    "print(\"Check common neighbours of 3 and 10:\")\n",
+    "for i in range(1,12):\n",
+    "    if (3,i) in G.edges() and (10,i) in G.edges():\n",
+    "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
+    "print(\"So, 8 needs to be fixed (as 4 is).\")\n",
+    "\n",
+    "print(\"Check neighbours of 9:\")\n",
+    "for i in range(1,12):\n",
+    "    if (9,i) in G.edges():\n",
+    "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
+    "print(\"So, also 6 needs to be fixed (as 4 and 8 are).\")\n",
+    "\n",
+    "print(\"Check common neighbours of 8 and 9:\")\n",
+    "for i in range(1,12):\n",
+    "    if (8,i) in G.edges() and (9,i) in G.edges():\n",
     "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
     "print(\"So, 7 needs to be fixed.\")\n",
     "\n",
@@ -534,50 +559,25 @@
     "for i in range(1,12):\n",
     "    if (7,i) in G.edges():\n",
     "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
-    "print(\"So, 8 needs to be fixed.\")\n",
-    "print(\"Also, {5,11} needs to be fixed (not necessarily point-wise).\")\n",
-    "\n",
-    "print(\"Check common neighbours of 5 and 11:\")\n",
-    "for i in range(1,12):\n",
-    "    if (5,i) in G.edges() and (11,i) in G.edges():\n",
-    "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
-    "print(\"So, 3 needs to be fixed (as 7 is).\")\n",
-    "\n",
-    "print(\"Check neighbours of 8:\")\n",
-    "for i in range(1,12):\n",
-    "    if (8,i) in G.edges():\n",
-    "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
-    "print(\"So, also 10 needs to be fixed (as 3 and 7 are).\")\n",
-    "\n",
-    "print(\"Check common neighbours of 3 and 8:\")\n",
-    "for i in range(1,12):\n",
-    "    if (3,i) in G.edges() and (8,i) in G.edges():\n",
-    "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
-    "print(\"So, 2 needs to be fixed.\")\n",
-    "\n",
-    "print(\"Check neighbours of 2:\")\n",
-    "for i in range(1,12):\n",
-    "    if (2,i) in G.edges():\n",
-    "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
-    "print(\"So, 9 needs to be fixed.\")\n",
-    "\n",
-    "print(\"Check neighbours of 9:\")\n",
-    "for i in range(1,12):\n",
-    "    if (9,i) in G.edges():\n",
-    "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
-    "print(\"So, 11 needs to be fixed (as 2 is).\")\n",
-    "print(\"So, also 5 needs to be fixed (as {5,11} is).\")\n",
+    "print(\"So, 11 needs to be fixed.\")\n",
     "\n",
     "print(\"Check neighbours of 11:\")\n",
     "for i in range(1,12):\n",
     "    if (11,i) in G.edges():\n",
     "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
-    "print(\"So, 6 needs to be fixed.\")\n",
+    "print(\"So, 10 needs to be fixed (as 7 is).\")\n",
+    "print(\"So, also 3 needs to be fixed (as {3,10} is).\")\n",
+    "\n",
+    "print(\"Check neighbours of 10:\")\n",
+    "for i in range(1,12):\n",
+    "    if (10,i) in G.edges():\n",
+    "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
+    "print(\"So, 5 needs to be fixed.\")\n",
     "\n",
     "print(\"Check degrees of remaining vertices:\")\n",
-    "for i in [1,4]:\n",
+    "for i in [1,2]:\n",
     "    print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
-    "print(\"So, also 1 and 4 need to be fixed.\")\n",
+    "print(\"So, also 1 and 2 need to be fixed.\")\n",
     "print(\"Hence, this graph has no non-trivial graph automorphisms.\")"
    ]
   },
@@ -599,7 +599,7 @@
     "from functions import *\n",
     "G = nx.Graph()\n",
     "G.add_nodes_from([1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
-    "G.add_edges_from([(1, 3), (1, 7), (1, 9), (2, 4), (2, 5), (2, 7), (2, 9), (3, 4), (3, 7), (4, 5), (4, 6), (4, 8), (5, 6), (5, 9), (6, 7), (6, 8), (7, 8), (8, 9)])\n",
+    "G.add_edges_from([(1, 2), (1, 3), (1, 5), (1, 6), (2, 3), (2, 4), (2, 7), (3, 6), (3, 7), (3, 8), (4, 6), (4, 7), (4, 8), (4, 9), (5, 6), (5, 7), (5, 9), (8, 9)])\n",
     "print(supp_graphs_forest(G))\n",
     "if supp_graphs_forest(G):\n",
     "    print(check_finite_index(G))\n",
@@ -616,52 +616,52 @@
     "from functions import *\n",
     "G = nx.Graph()\n",
     "G.add_nodes_from([1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
-    "G.add_edges_from([(1, 3), (1, 7), (1, 9), (2, 4), (2, 5), (2, 7), (2, 9), (3, 4), (3, 7), (4, 5), (4, 6), (4, 8), (5, 6), (5, 9), (6, 7), (6, 8), (7, 8), (8, 9)])\n",
+    "G.add_edges_from([(1, 2), (1, 3), (1, 5), (1, 6), (2, 3), (2, 4), (2, 7), (3, 6), (3, 7), (3, 8), (4, 6), (4, 7), (4, 8), (4, 9), (5, 6), (5, 7), (5, 9), (8, 9)])\n",
     "\n",
     "print(\"Compute the degrees of all vertices:\")\n",
     "for i in range(1,10):\n",
     "    print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
-    "print(\"So, {1,3} needs to be fixed (not necessarily point-wise).\")\n",
+    "print(\"So, {8,9} needs to be fixed (not necessarily point-wise).\")\n",
     "\n",
-    "print(\"Check common neighbours of 1 and 3:\")\n",
+    "print(\"Check common neighbours of 8 and 9:\")\n",
     "for i in range(1,10):\n",
-    "    if (1,i) in G.edges() and (3,i) in G.edges():\n",
+    "    if (8,i) in G.edges() and (9,i) in G.edges():\n",
     "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
-    "print(\"So, 7 needs to be fixed.\")\n",
-    "print(\"So, also 4 needs to be fixed (as 7 is; see all vertices).\")\n",
+    "print(\"So, 4 needs to be fixed.\")\n",
+    "print(\"So, also 3 needs to be fixed (as 4 is; see all vertices).\")\n",
+    "\n",
+    "print(\"Check neighbours of 3:\")\n",
+    "for i in range(1,10):\n",
+    "    if (3,i) in G.edges():\n",
+    "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
+    "print(\"So, 8 needs to be fixed.\")\n",
+    "print(\"So, also 9 needs to be fixed (as 8 is; see all vertices).\")\n",
+    "\n",
+    "print(\"Check neighbours of 9:\")\n",
+    "for i in range(1,10):\n",
+    "    if (9,i) in G.edges():\n",
+    "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
+    "print(\"So, 5 needs to be fixed.\")\n",
+    "\n",
+    "print(\"Check common neighbours of 4 and 5:\")\n",
+    "for i in range(1,10):\n",
+    "    if (4,i) in G.edges() and (5,i) in G.edges():\n",
+    "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
+    "print(\"So, {6,7} needs to be fixed (not necessarily point-wise).\")\n",
     "\n",
     "print(\"Check neighbours of 4:\")\n",
     "for i in range(1,10):\n",
     "    if (4,i) in G.edges():\n",
     "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
-    "print(\"So, 3 needs to be fixed.\")\n",
-    "print(\"So, also 1 needs to be fixed (as 3 is; see all vertices).\")\n",
+    "print(\"So, 2 needs to be fixed (as {6,7} is fixed).\")\n",
+    "print(\"So, also the remaining vertex except {6,7}, which is 1, needs to be fixed.\")\n",
     "\n",
-    "print(\"Check neighbours of 1:\")\n",
+    "print(\"Check neighbours of 2:\")\n",
     "for i in range(1,10):\n",
-    "    if (1,i) in G.edges():\n",
+    "    if (2,i) in G.edges():\n",
     "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
-    "print(\"So, 9 needs to be fixed.\")\n",
-    "\n",
-    "print(\"Check common neighbours of 7 and 9:\")\n",
-    "for i in range(1,10):\n",
-    "    if (7,i) in G.edges() and (9,i) in G.edges():\n",
-    "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
-    "print(\"So, {2,8} needs to be fixed (not necessarily point-wise).\")\n",
-    "\n",
-    "print(\"Check neighbours of 7:\")\n",
-    "for i in range(1,10):\n",
-    "    if (7,i) in G.edges():\n",
-    "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
-    "print(\"So, 6 needs to be fixed (as {2,8} is fixed).\")\n",
-    "print(\"So, also the remaining vertex except {2,8}, which is 5, needs to be fixed.\")\n",
-    "\n",
-    "print(\"Check neighbours of 6:\")\n",
-    "for i in range(1,10):\n",
-    "    if (6,i) in G.edges():\n",
-    "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
-    "print(\"So, 8 needs to be fixed (as 5 is).\")\n",
-    "print(\"So, also the remaining vertex 2 needs to be fixed.\")\n",
+    "print(\"So, 7 needs to be fixed (as 1 is).\")\n",
+    "print(\"So, also the remaining vertex 6 needs to be fixed.\")\n",
     "print(\"Hence, this graph has no non-trivial graph automorphisms.\")"
    ]
   },
@@ -683,7 +683,7 @@
     "from functions import *\n",
     "G = nx.Graph()\n",
     "G.add_nodes_from([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11])\n",
-    "G.add_edges_from([(1, 3), (1, 5), (1, 8), (2, 4), (2, 5), (2, 8), (2, 10), (3, 6), (3, 8), (3, 9), (3, 10), (4, 5), (4, 6), (4, 8), (4, 9), (5, 6), (6, 7), (6, 9), (7, 10), (7, 11), (8, 9), (8, 11), (9, 10)])\n",
+    "G.add_edges_from([(1, 2), (1, 3), (1, 5), (1, 6), (2, 4), (2, 5), (2, 7), (3, 4), (3, 8), (4, 5), (4, 8), (4, 9), (4, 10), (5, 6), (5, 9), (6, 8), (6, 9), (6, 11), (7, 8), (7, 9), (7, 11), (8, 9), (10, 11)])\n",
     "print(supp_graphs_forest(G))\n",
     "if supp_graphs_forest(G):\n",
     "    print(check_finite_index(G))\n",
@@ -700,29 +700,29 @@
     "from functions import *\n",
     "G = nx.Graph()\n",
     "G.add_nodes_from([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11])\n",
-    "G.add_edges_from([(1, 3), (1, 5), (1, 8), (2, 4), (2, 5), (2, 8), (2, 10), (3, 6), (3, 8), (3, 9), (3, 10), (4, 5), (4, 6), (4, 8), (4, 9), (5, 6), (6, 7), (6, 9), (7, 10), (7, 11), (8, 9), (8, 11), (9, 10)])\n",
+    "G.add_edges_from([(1, 2), (1, 3), (1, 5), (1, 6), (2, 4), (2, 5), (2, 7), (3, 4), (3, 8), (4, 5), (4, 8), (4, 9), (4, 10), (5, 6), (5, 9), (6, 8), (6, 9), (6, 11), (7, 8), (7, 9), (7, 11), (8, 9), (10, 11)])\n",
     "\n",
     "print(\"Compute the degrees of all vertices:\")\n",
     "for i in range(1,12):\n",
     "    print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
-    "print(\"So, 8 and 11 need to be fixed.\")\n",
+    "print(\"So, 4 and 10 need to be fixed.\")\n",
+    "\n",
+    "print(\"Check neighbours of 10:\")\n",
+    "for i in range(1,12):\n",
+    "    if (10,i) in G.edges():\n",
+    "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
+    "print(\"So, 11 needs to be fixed.\")\n",
+    "print(\"So, also 3 needs to be fixed (as 11 is; see all vertices).\")\n",
     "\n",
     "print(\"Check neighbours of 11:\")\n",
     "for i in range(1,12):\n",
     "    if (11,i) in G.edges():\n",
     "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
-    "print(\"So, 7 needs to be fixed.\")\n",
-    "print(\"So, also 1 needs to be fixed (as 7 is; see all vertices).\")\n",
+    "print(\"So, 6 and 7 need to be fixed.\")\n",
     "\n",
     "print(\"Check neighbours of 7:\")\n",
     "for i in range(1,12):\n",
     "    if (7,i) in G.edges():\n",
-    "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
-    "print(\"So, 6 and 10 need to be fixed.\")\n",
-    "\n",
-    "print(\"Check neighbours of 10:\")\n",
-    "for i in range(1,12):\n",
-    "    if (10,i) in G.edges():\n",
     "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
     "print(\"So, 2 needs to be fixed.\")\n",
     "\n",
@@ -730,13 +730,13 @@
     "for i in range(1,12):\n",
     "    if (2,i) in G.edges():\n",
     "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
-    "print(\"So, 4 and 5 (as 10 is) need to be fixed.\")\n",
+    "print(\"So, 1 (as 7 is) and 5 need to be fixed.\")\n",
     "\n",
-    "print(\"Check neighbours of 1:\")\n",
+    "print(\"Check neighbours of 3:\")\n",
     "for i in range(1,12):\n",
-    "    if (1,i) in G.edges():\n",
+    "    if (3,i) in G.edges():\n",
     "        print(\"     \"+str(i)+\" has degree \"+str(G.degree(i)))\n",
-    "print(\"So, also 3 needs to be fixed.\")\n",
+    "print(\"So, also 8 needs to be fixed.\")\n",
     "print(\"So, also the only remaining vertex 9 needs to be fixed.\")\n",
     "print(\"Hence, this graph has no non-trivial graph automorphisms.\")"
    ]
